fix: remove padding from inner navbar-link in mobile view to stop overflowing navbar-item container

--- a/src/App.scss
+++ b/src/App.scss
@@ -131,7 +131,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
   }
 
   .navbar-toggle {
